answer-content/235771.txt
<div class="s-prose s-prose__disable-spoiler-hover js-post-body" itemprop="text">
<h2>FTBFS</h2>

<p>This code doesn't compile here (GCC 9.2, -std=c++2a):</p>

<pre class="lang-none prettyprint-override"><code>29935.cpp:24:64: error: ‘class std::basic_ostream&lt;char&gt;’ has no member named ‘str’
   24 |   std::string replacement_string{(std::ostringstream{} &lt;&lt; val).str()};
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
</code></pre>

<p>I had to expand that to keep a reference to the concrete class:</p>

<pre><code>  std::ostringstream stream{};
  stream &lt;&lt; val;
  std::string replacement_string{stream.str()};
</code></pre>

<h2>Major</h2>

<p>We can pass <code>%%</code> to <code>std::sprintf()</code> to produce a single <code>%%</code>, but that doesn't work here, so there's no way for the format string to specify a literal <code>%1</code> to output.</p>

<h2>Very minor</h2>

<p>There's a stray <code>;</code> after the definition of <code>main()</code> in the test program.</p>
    </div>